kubernetes/deployment-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-postgres
  namespace: kiii-project-borisdz-185022
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: storage-postgres
      volumes:
        - name: storage-postgres
          persistentVolumeClaim:
            claimName: postgres-pvc
