kubernetes/statefulset-postgresql.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-postgresql
  namespace: kiii-project-borisdz-185022
spec:
  serviceName: service-postgres
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: kiii-project-borisdz-185022
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
     - metadata:
         name: postgres-storage
       spec:
         accessModes: [ "ReadWriteOnce" ]
         resources:
           requests:
             storage: 1Gi
