kubernetes/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  namespace: kiii-project-borisdz-185022
spec:
  selector:
    app: eshop-app
  ports:
    - port: 9090
      targetPort: 9090
