kubernetes/service-postgresql.yml
apiVersion: v1
kind: Service
metadata:
  name: service-postgres
  namespace: kiii-project-borisdz-185022
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
